# dna-dps-ac-bot

./: .funcignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  function_app.py  pyproject.toml  ruff.toml
.github/workflows/: main_dps-bot-func.yml  pr-check.yml
src/: cards.py  dps_bot.py
